[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Resources Minijuegos/Manos final/ventana fondo manos.png" type="Texture" id=1]
[ext_resource path="res://scenes/minijuegos/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Resources Minijuegos/Manos final/Mano 1 .png" type="Texture" id=3]
[ext_resource path="res://scenes/minijuegos/manos.gd" type="Script" id=4]
[ext_resource path="res://soundes/AMBIENCE INSIDE POST RITUAL.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Resources Minijuegos/Manos final/ventana borde manos.png" type="Texture" id=6]
[ext_resource path="res://assets/CRÃ‰DITOS.png" type="Texture" id=7]
[ext_resource path="res://shaders/GLES2 anim noise color.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Resources Minijuegos/Manos final/Manos 2.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=5]
radius = 54.0
height = 0.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1286, 660 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../box/CollisionShape2D3:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Llave2B:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -137, -20 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1436, 496 ), Vector2( 1436, 501 ), Vector2( 1440, 496 ), Vector2( 1436, 496 ), Vector2( 1432, 494 ), Vector2( 1437, 496 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1436, 496 ), Vector2( 906, 505 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../OpenWindow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../ResetTimer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../box/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.4375, 484.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1185.5, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 603.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 61.5, 64.25 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "end"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 6.4, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 11.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_end"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("credits:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 11.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -30.173 ]
}

[node name="minijuego manos" type="Node2D"]
pause_mode = 2
position = Vector2( 2, 0 )
z_index = -5
script = ExtResource( 4 )

[node name="VentanaLlavesFondo" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="VentanaLlavesOutline" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="compa" type="KinematicBody2D" parent="."]
position = Vector2( 1286, 660 )

[node name="Llave2B" type="Sprite" parent="compa"]
position = Vector2( -137, -20 )
texture = ExtResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="compa"]
position = Vector2( 116, 21 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="compa"]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/open = SubResource( 9 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 364, 498 )

[node name="Llave2A" parent="player" index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="player" index="1"]
position = Vector2( -40, -93 )
disabled = true

[node name="CollisionShape2D2" parent="player" index="2"]
position = Vector2( -23, -35 )

[node name="box" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="box"]
position = Vector2( 790, 549 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="box"]
position = Vector2( 1093, 45 )
shape = SubResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="box"]
position = Vector2( 1006, 996 )
shape = SubResource( 3 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="box"]
position = Vector2( -36, 544 )
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="box"]
position = Vector2( 1993, 529 )
shape = SubResource( 6 )

[node name="OpenWindow" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="GLES2 anim noise color" parent="." instance=ExtResource( 8 )]
visible = false

[node name="lock" type="Area2D" parent="."]
position = Vector2( 960, 540 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lock"]
shape = SubResource( 10 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="WinTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 50.0
one_shot = true

[node name="Blackout" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/end = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="credits" type="Sprite" parent="."]
position = Vector2( -25, -18 )
scale = Vector2( 1.0224, 1.03056 )
texture = ExtResource( 7 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -203.0
margin_top = -183.0
margin_right = 2478.0
margin_bottom = 1316.0
color = Color( 0, 0, 0, 0 )

[connection signal="body_entered" from="lock" to="." method="_on_lock_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]

[editable path="player"]
